force-app/main/default/objects/Job_Application_Audit__c/Job_Application_Audit__c.object-meta.xml
<CustomObject>
    <description>Audit trail for Job Application data changes and access</description>
    <label>Job Application Audit</label>
    <nameField>
        <displayFormat>AUDIT-{00000}</displayFormat>
        <label>Audit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Application Audits</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>