force-app/main/default/objects/Job_Application_Audit__c/fields/Changes_Made__c.field-meta.xml
<CustomField>
    <fullName>Changes_Made__c</fullName>
    <description>Details of the changes made to the record</description>
    <label>Changes Made</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>