force-app/main/default/objects/Job_Application_Audit__c/fields/Compliance_Notes__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Notes__c</fullName>
    <description>Additional compliance and regulatory notes</description>
    <label>Compliance Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>