force-app/main/default/objects/Job_Application_Audit__c/fields/IP_Address__c.field-meta.xml
<CustomField>
    <fullName>IP_Address__c</fullName>
    <description>IP address of the client that performed the operation</description>
    <label>IP Address</label>
    <length>45</length>
    <type>Text</type>
</CustomField>