force-app/main/default/objects/Job_Application_Audit__c/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <description>ID of the Job Application record that was modified</description>
    <label>Record ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>