force-app/main/default/objects/Job_Application_Audit__c/fields/Security_Classification__c.field-meta.xml
<CustomField>
    <fullName>Security_Classification__c</fullName>
    <description>Security classification of the data involved</description>
    <label>Security Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>STANDARD</fullName>
                <default>true</default>
                <label>STANDARD</label>
            </value>
            <value>
                <fullName>SENSITIVE</fullName>
            </value>
            <value>
                <fullName>CONFIDENTIAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>