force-app/main/default/objects/Job_Application_Audit__c/fields/Session_Id__c.field-meta.xml
<CustomField>
    <fullName>Session_Id__c</fullName>
    <description>Session ID of the user session</description>
    <label>Session ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>