force-app/main/default/objects/Job_Application_Audit__c/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <description>Date and time when the operation was performed</description>
    <label>Timestamp</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>