force-app/main/default/objects/Job_Application_Audit__c/fields/User_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Id__c</fullName>
    <description>ID of the user who performed the operation</description>
    <label>User ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>