force-app/main/default/objects/Job_Application_Audit__c/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <description>Username of the user who performed the operation</description>
    <label>Username</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>